# libpep

./: .gitignore  .gitlab-ci-benchmark.yml  .gitlab-ci.yml  Cargo.toml  README.md  package.json  pyproject.toml
.github/workflows/: benchmark-elaborate.yml  benchmark.yml  build-and-test.yml  build.yml  check-version.yml  lint-and-test.yml  publish.yml  rust.yml  test.yml
benches/: base.rs  distributed.rs  energy_base.rs  energy_distributed.rs  quick.rs
certs/: CA.key  CA.srl  cert.key
demo/: demo.js  index.html
src/: arithmetic.rs  authenticity.rs  distributed.rs  distributed_proved.rs  elgamal.rs  high_level.rs  high_level_proved.rs  lib.rs  lib_wasm.rs  main.rs  primitives.rs  proved.rs  simple.rs  tests.rs  tls.rs  utils.rs  verifiers_cache.rs  zkps.rs
src/distributed/: key_blinding.rs  systems.rs
src/high_level/: contexts.rs  data_types.rs  keys.rs  ops.rs  utils.rs
src/internal/: arithmetic.rs
src/lib/: lib.rs  py.rs
src/lib/arithmetic/: group_elements.rs  mod.rs  scalars.rs
src/lib/arithmetic/py/: group_elements.rs  mod.rs  scalars.rs
src/lib/arithmetic/wasm/: group_elements.rs  mod.rs  scalars.rs
src/lib/base/: elgamal.rs  primitives.rs
src/lib/base/py/: mod.rs
src/lib/base/wasm/: elgamal.rs  mod.rs  primitives.rs
src/lib/client/: batch.rs  distributed.rs  functions.rs  mod.rs  prelude.rs  types.rs
src/lib/client/py/: batch.rs  distributed.rs  functions.rs  types.rs
src/lib/client/wasm/: batch.rs  distributed.rs  functions.rs  types.rs
src/lib/core/: batch.rs  client.rs  contexts.rs  data.rs  elgamal.rs  functions.rs  keys.rs  mod.rs  primitives.rs  proved.rs  rerandomize.rs  transcryptor.rs  zkps.rs
src/lib/core/data/: long.rs  mod.rs  padding.rs  records.rs  simple.rs  traits.rs
src/lib/core/factors/: derivation.rs  mod.rs  secrets.rs  types.rs
src/lib/core/json/: builder.rs  core.rs  data.rs  macros.rs  mod.rs  py.rs  structure.rs  transcryption.rs  utils.rs  wasm.rs
src/lib/core/keys/: generation.rs  mod.rs  traits.rs
src/lib/core/long/: batch.rs  data.rs  global.rs  mod.rs  ops.rs
src/lib/core/proved/: commitments.rs  mod.rs  rekey.rs  rerandomize.rs  reshuffle.rs  rsk.rs
src/lib/core/py/: batch.rs  client.rs  contexts.rs  data.rs  elgamal.rs  functions.rs  global.rs  keys.rs  mod.rs  padding.rs  proved.rs  rerandomize.rs  transcryptor.rs  zkps.rs
src/lib/core/transcryption/: batch.rs  contexts.rs  ops.rs  secrets.rs
src/lib/core/wasm/: batch.rs  client.rs  contexts.rs  core.rs  functions.rs  global.rs  keys.rs  mod.rs  padding.rs  rerandomize.rs  transcryptor.rs
src/lib/data/: long.rs  records.rs  simple.rs  traits.rs
src/lib/data/json/: builder.rs  data.rs  macros.rs  structure.rs
src/lib/data/padding/: external.rs  internal.rs  mod.rs
src/lib/data/py/: json.rs  long.rs  padding.rs  records.rs  simple.rs
src/lib/data/wasm/: json.rs  long.rs  records.rs
src/lib/distributed/: key_blinding.rs  mod.rs  systems.rs
src/lib/distributed/client/: core.rs  global.rs  json.rs  keys.rs  long.rs  mod.rs
src/lib/distributed/server/: batch.rs  core.rs  json.rs  keys.rs  long.rs  mod.rs  offline.rs  setup.rs  transcryptor.rs
src/lib/factors/: commitments.rs  mod.rs  secrets.rs  types.rs
src/lib/factors/py/: commitments.rs  contexts.rs  mod.rs  types.rs
src/lib/factors/wasm/: commitments.rs  contexts.rs  mod.rs
src/lib/high_level/: contexts.rs  core.rs  data_types.rs  global.rs  keys.rs  mod.rs  ops.rs  padding.rs  rerandomize.rs  secrets.rs  utils.rs
src/lib/high_level/long/: batch.rs  core.rs  global.rs  mod.rs  ops.rs
src/lib/high_level/py/: core.rs  global.rs  keys.rs  mod.rs  padding.rs  rerandomize.rs
src/lib/high_level/transcryption/: batch.rs  contexts.rs  mod.rs  ops.rs  secrets.rs
src/lib/high_level/wasm/: core.rs  global.rs  keys.rs  padding.rs  rerandomize.rs
src/lib/internal/: arithmetic.rs
src/lib/keys/: generation.rs  mod.rs
src/lib/keys/distribution/: blinding.rs  (+3 more)
src/lib/low_level/: elgamal.rs  mod.rs  primitives.rs
src/lib/python/: arithmetic.rs  distributed.rs  high_level.rs  mod.rs
src/lib/transcryptor/: batch.rs  distributed.rs  functions.rs  mod.rs  prelude.rs  types.rs  verifiable.rs
src/lib/verifier/: cache.rs  mod.rs  py.rs  verifier.rs  wasm.rs
src/lib/wasm/: arithmetic.rs  distributed.rs  high_level.rs  mod.rs
src/low_level/: elgamal.rs  primitives.rs
src/proved/: distributed.rs  high_level.rs  primitives.rs  verifiers_cache.rs  zkps.rs
src/tests/: arithmetic.rs  distributed.rs  elgamal.rs  high_level.rs  legacy_pep_repo.rs  primitives.rs  proved.rs  zkps.rs
src/tests/energy/: individual.rs  network.rs
src/tests/js/: distributed.test.js  high_level.test.js  primitives.test.js
src/tests/proved/: distributed.rs  high_level.rs  primitives.rs  zkps.rs
src/wasm/: arithmetic.rs  distributed.rs  elgamal.rs  high_level.rs  primitives.rs
src/wasm/tests/: arithmetic.test.js  distributed.test.js  elgamal.test.js  high_level.test.js  primitives.test.js
tests/: api.rs  arithmetic.rs  arithmetic.test.js  core.rs  distributed.rs  elgamal.rs  energy.rs  energy_individual.rs  high_level.rs  json.rs  legacy.rs  legacy_pep_repo.rs  n-pep.rs  padding.rs  primitives.rs  proved.rs  tests.rs  utils.rs  verifiable.rs  wasm_tests.rs  zkps.rs
tests/js/: arithmetic.test.js  distributed.test.js  elgamal.test.js  high_level.test.js  primitives.test.js
tests/python/: __init__.py  test_arithmetic.py  test_base.py  test_core.py  test_distributed.py  test_elgamal.py  test_high_level.py  test_json.py  test_primitives.py
tests/wasm/: core.test.js  distributed.test.js  elgamal.test.js  high_level.test.js  json.test.js  primitives.test.js
(+112 files in other folders)
