[package]
name = "libpep"
version = "0.5.0"
edition = "2021"
authors = ["Bernard van Gastel <bvgastel@bitpowder.com>", "Job Doesburg <job@jobdoesburg.nl>"]
homepage = "https://www.bitpowder.com/libs/libpep-rust/"
repository = "https://gitlab.com/bitpowder/indigo-ng"
license = "Apache-2.0"
keywords = ["crypto", "pep", "pseudonimization"]
categories = ["command-line-interface"]
description = "implementation of PEP primitives, offering pseudonimization and encryption interfaces"
readme = "README.md"

[lib]
name = "libpep"
crate-type = ["cdylib", "rlib"]

[features]
default = ["build-binary"]
build-binary = ["buildinfy","commandy","commandy_macros"]
elgamal2 = []
wasm = ["wasm-bindgen", "wasm-bindgen-test", "getrandom"]
legacy-pep-repo-compatible = []
unsafe-reconstruct = []

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand = { version = "^0.8", features = ["std"] }
rand_core = { version = "^0.6", features = ["std"] }
sha2 = "0.10.5"
buildinfy = { version = "^0.1", optional = true }
commandy = { version = "^0.2", optional = true }
commandy_macros = { version = "^0.2", optional = true }
hex = "0.4.3"
derive_more = { version = "1.0.0", features = ["deref", "from", "into"] }

# wasm
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }
getrandom = { version = "^0.2", features = ["js"], optional = true }
serde = { version = "1.0.209", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
# testing
time = "0.3.36"
log = "0.4.22"
serde_json = "1.0.128"