[package]
name = "libpep"
version = "1.0.0-alpha.1"
edition = "2021"
authors = ["Bernard van Gastel <bvgastel@bitpowder.com>", "Job Doesburg <job@jobdoesburg.nl>"]
homepage = "https://www.bitpowder.com/libs/libpep-rust/"
repository = "https://gitlab.com/bitpowder/indigo-ng"
license = "Apache-2.0"
keywords = ["crypto", "pep", "pseudonimization"]
categories = ["command-line-interface"]
description = "implementation of PEP primitives, offering pseudonimization and encryption interfaces"
readme = "README.md"

[lib]
name = "libpep"
crate-type = ["cdylib", "rlib"]

[features]
default = []
elgamal3 = []
wasm = ["wasm-bindgen", "getrandom"]
legacy-pep-repo-compatible = []
insecure-methods = []
energy-measurements = ['buildinfy']

[dependencies]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek.git", features = ["rand_core"] }
rand = { version = "^0.8", features = ["std"] }
rand_core = { version = "^0.6", features = ["std"] }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "^0.2", features = ["js"], optional = true}
sha2 = "0.10.5"
hmac = "^0.12"
buildinfy = { version = "^0.1", optional = true }
commandy = { version = "^0.2", optional = true }
commandy_macros = { version = "^0.2", optional = true }
hex = "0.4.3"
derive_more = { version = "1.0.0", features = ["deref", "from", "into"] }
serde = { version = "1.0.209", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
time = "0.3.36"
log = "0.4.22"
serde_json = "1.0.128"
ureq = { version = "2.9.6", features = ["tls"] }
libaes = { version =  "0.7.0" }
hyper = { version = "^1.0", features = ["client","http1","http2","server"] }
hyper-util = { version = "^0.1", features = ["client-legacy","server-auto","server","http1","http2","tokio"] }
http-body-util = { version = "^0.1" }
tokio = { version = "^1", features = ["signal","rt-multi-thread","macros","io-util","parking_lot","time","test-util"]  }
tokio-util = { version = "^0.7", features = ["codec"] }
tokio-stream = { version = "^0.1" }
bytes = { version = "^1" }
futures = { version = "^0.3" }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.0"


