[package]
name = "libpep"
version = "0.4.0"
edition = "2021"
authors = ["Bernard van Gastel <bvgastel@bitpowder.com>", "Job Doesburg <job@jobdoesburg.nl>"]
homepage = "https://github.com/NOLAI/libpep"
repository = "https://github.com/NOLAI/libpep"
license = "Apache-2.0"
keywords = ["crypto", "pep", "pseudonimization"]
categories = ["command-line-interface"]
description = "implementation of PEP primitives, offering pseudonimization and encryption interfaces"
readme = "README.md"

[lib]
name = "libpep"
crate-type = ["cdylib", "rlib"]

[features]
default = ["build-binary"]
elgamal3 = []
wasm = ["wasm-bindgen", "getrandom"]
legacy-pep-repo-compatible = []
insecure-methods = []
build-binary = ["buildinfy","commandy","commandy_macros"]

[[bin]]
name = "peppy"
required-features = ["build-binary"]

[dependencies]
curve25519-dalek-libpep = { version = "^4.0", features = ["rand_core"] }
rand = { version = "^0.8", features = ["std"] }
rand_core = { version = "^0.6", features = ["std"] }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "^0.2", features = ["js"], optional = true}
sha2 = "0.10.5"
hmac = "^0.12"
hex = "0.4.3"
derive_more = { version = "1.0.0", features = ["deref", "from", "into"] }
serde = { version = "1.0.209", features = ["derive"] }
base64 = "0.22.1"
buildinfy = { version = "^0.1", optional = true }
commandy = { version = "^0.2", optional = true }
commandy_macros = { version = "^0.2", optional = true }

[dev-dependencies]
serde_json = "1.0.128"

[package.metadata.deb]
name = "peppy"
depends = ""
assets = [
    ["peppy.1", "usr/man/man1/", "444"],
    ["target/release/peppy", "usr/bin/peppy", "555"],
]

[package.metadata.freebsd]
assets = [
    ["peppy.1", "man/man1/", "444"],
    ["target/release/peppy", "bin/peppy", "555"],
]
